refactor: degrade jdk version to 1.8 and fix relevant ecosystem version and remove conflict package